--- a/Selenium_Tests/.classpath
+++ b/Selenium_Tests/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/selenium-java-2.31.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.31.0.jar" sourcepath="lib/selenium-java-2.31.0-srcs.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.31.0.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="target/MySel20Proj-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-java-2.31.0-srcs.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
